--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -5,5 +5,7 @@
     --bgColorLight1: #F0F0F0;
     --bgColorLight2: #FFFFFF;
 
+    --textColorLight1: #4B5563;
+    --textColorLight2: #111827;
     --textColorLight3: #724BFF;
 }
