--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -9,3 +9,21 @@
     --textColorLight2: #111827;
     --textColorLight3: #724BFF;
 }
+
+.itemContainer {
+    padding: 10px;
+
+    display: grid;
+    grid-template-areas: "image itemName"
+                         "image itemCost"
+                         "image itemDemand";
+
+    grid-template-rows: auto auto auto 0.4fr 0.75fr;
+    justify-content: start;
+    justify-items: start;
+    align-items: start;
+
+    background-color: var(--bgColorLight2);
+    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 1%);
+    border-radius: 10px;
+}
