--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap');
 @font-face {font-family: "indigoRegular";src: url("./Indigo\ Regular.woff")}
 
 :root {
